# wdm-simulator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: about.rst  arch.rst  conf.py  index.rst  install.rst  pitch.rst  walkthru.rst
docs/source/intro/: basic_concepts.rst  batch_mode.rst  first_script.rst  params.rst
examples/: example_arbiter.py  example_run_config.yaml  example_sweep_config.yaml  run_arbiter.py  run_example.sh  sweep_example.sh
examples/results/sweep/AR_example_one_by_one/LS_laser-4/: sweep__RN_ring-4-sweep__ILO_linear__TLO_linear__num_swaps_laser_2_ring_2.csv  sweep__RN_ring-4-sweep__ILO_linear__TLO_linear__num_swaps_laser_2_ring_2.json
wdmsim/: cli.py  exceptions.py  global_vars.py  run.py  simulator.py
wdmsim/arbiter/: arbiter_factory.py  arbiter_instr.py  arbiter_memory.py  base_arbiter.py
wdmsim/models/: laser_grid.py  optical_port.py  optical_wave.py  ring_row.py  rx_slice.py  sim_instance.py  sysclk.py  system_under_test.py  tuner.py
wdmsim/plotters/: plotter.py  visualizer.py
wdmsim/schemas/: base_config.py  design_params.py  ini_config.py  yml_config.py
wdmsim/stats/: base_stats.py  lock_code_stat.py  relation_stat.py
wdmsim/utils/: README.md  lock_status_table.py  logger.py  pretty_print.py  sim_json.py  slack.py  snapshot.py  update_dict.py  utils_worker.py
