[build-system]
#requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
# remove setuptools_scm so that versioning is done manually
requires = ["setuptools>=46.1.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
