# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = wdmsim
description = WDM simulator
version = 0.0.1
author = Sunjin Choi
author_email = sunjin_choi@berkeley.edu
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/sunjin-choi/wdm-simulator

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

# TODO: later refactor SALib, scipy, scikit-learn to [sens]
[options]
zip_safe = False
include_package_data = True
# you don't need this bc wdmsim is directly under wdm-simulator
#package_dir =
#    = wdmsim
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	pandas
	cerberus
	typing_extensions
	PyYAML
	click
	matplotlib	
	seaborn
	slack_sdk
	certifi
	tqdm
	pdbpp
	tabulate
	art
	SALib
	scipy
	scikit-learn
	dataclasses; python_version < "3.7"

[options.packages.find]
#where = wdmsim
where = .
exclude = 
	configs*
	tools*
	docs*
	tests*
	scripts*

[options.entry_points]
console_scripts =
    wdmsim = wdmsim.cli:main
